tests/rustdoc-ui/output-format-unknown.rs
//@ compile-flags: --output-format=da-doo-ron-ron

pub struct Foo;
//~? ERROR unknown output format `da-doo-ron-ron`
